[package]
name = "brainfust"
version = "0.1.0"
authors = ["mediocre <druksasha@ukr.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# llvmenv = "0.3.0"
# llvm-sys = "100"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }
clap = "2.33"
